# claude-buddy

./: .clangd  .gitignore  .gitmodules  README.md
.github/workflows/: firmware.yml
app/boards/hs-buddy/: Kconfig.board  SConscript
app/boards/hs-buddy/hcpu/: Kconfig.board  board.conf
app/boards/hs-buddy/lcpu/: Kconfig.board
app/boards/hs-buddy_base/script/: SConscript
app/font/: SConscript
app/lcd_drivers/: SConscript
app/lcd_drivers/st7365/: SConscript
app/peripherals/st7365/: st7365.c
app/project/: Kconfig  Kconfig.proj  M0_RESOURCE_BUDGET.md  SConscript  SConstruct  proj.conf  ptab.json  rtconfig.py  rtconfig_project.h
app/src/: SConscript  main.c
app/src/ascii/: M5StickCPlus.h  buddy.h  buddy_ascii.cpp  buddy_ascii.h  buddy_common.h
app/src/ascii/buddies/: cat.cpp  chonk.cpp
app/src/bridge/: buddy_app_c_api.cpp  buddy_app_c_api.h
app/src/core/: BuddyApp.cpp  BuddyApp.hpp  BuddyProtocol.cpp  BuddyProtocol.hpp  JsonLineAssembler.cpp  JsonLineAssembler.hpp
app/src/platform/: buddy_charger.c  buddy_charger.h
app/src/storage/: buddy_character_runtime.c  buddy_character_runtime.h  buddy_character_store.c  buddy_character_store.h  buddy_prefs.c  buddy_prefs.h
app/src/transport/: ble_nus_sifli.c  ble_nus_sifli.h
app/src/ui/: buddy_ui.h  buddy_ui_390x450.c  buddy_ui_data.c  buddy_ui_data.h
docs/: architecture.md  development.md  protocol.md
tests/hardware/: README.md
tests/hardware/project/: Kconfig  Kconfig.proj  SConscript  SConstruct  link.lds  proj.conf  ptab.json
tests/hardware/src/: SConscript  buddy_core_tests.cpp  buddy_json_line_assembler_source.cpp  buddy_protocol_source.cpp  main.c  unity_config.h  unity_source.c
tests/host/: rtthread.h  run_host_tests.sh  test_buddy_app.cpp  test_buddy_ascii.cpp  test_buddy_protocol.cpp  test_json_line_assembler.cpp
tools/: generate_compile_commands.sh
tools/lvgl_pc_sim/: CMakeLists.txt
tools/lvgl_pc_sim/include/: littlevgl2rtt.h  lv_conf.h  lv_drv_conf.h  lv_ex_data.h  lvsf_font.h  rtconfig.h  rtthread.h
tools/lvgl_pc_sim/src/: buddy_ui_data_mock.c  buddy_ui_mock.h  littlevgl2rtt_stub.c  main.c  rtthread_stub.c
